--- a/about us.html
+++ b/about us.html
@@ -18,7 +18,7 @@
             </label>
             <label class="logo">MoniSoft</label>
             <ul>
-                <li><a href="#">Начало</a></li>
+                <li><a href="http://127.0.0.1:5500/index.html">Начало</a></li>
                 <li><a href="http://127.0.0.1:5500/gallery.html">Снимки</a></li>
                 <li><a href="http://127.0.0.1:5500/video.html">Видео</a></li>
                 <li><a href="http://127.0.0.1:5500/contact.html">Контакти</a></li>
