--- a/video.html
+++ b/video.html
@@ -4,7 +4,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta charset="utf-8" />
-        <title>MoniSoft - Контакти</title>
+        <title>MoniSoft - Видео</title>
         <link rel="stylesheet" type="text/css" href="css/style.css" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <script src="https://kit.fontawesome.com/a07d05399.js"></script>
@@ -17,7 +17,7 @@
             </label>
             <label class="logo">MoniSoft</label>
             <ul>
-                <li><a href="#">Начало</a></li>
+                <li><a href="http://127.0.0.1:5500/index.html">Начало</a></li>
                 <li><a href="http://127.0.0.1:5500/gallery.html">Снимки</a></li>
                 <li><a class="active" href="#">Видео</a></li>
                 <li><a href="http://127.0.0.1:5500/contact.html">Контакти</a></li>
